# unite_detection

./: .gitignore  example.yaml  initialize.sh  lock_log.txt  pyproject.toml
src/unite_detection/: __init__.py  hparam_search.py  main.py  train.py
src/unite_detection/dataset/: __init__.py  base_dataset.py  celeb_df_dataset.py  custom_video_dataset.py  ff_dataset.py  image_processor.py  sail_vos_dataset.py
src/unite_detection/lit_modules/: __init__.py  datamodule.py  dataset_manager.py  unite_classifier.py  visualization_callback.py
src/unite_detection/losses/: __init__.py  ad_loss.py  focal_loss.py
src/unite_detection/models/: __init__.py  positional_encoding.py  unite_model.py  vit_encoder.py
src/unite_detection/processor/: __init__.py  base_processor.py  image_processor.py  video_processor.py
src/unite_detection/schemas/: __init__.py  schemas.py
src/unite_detection/utils/: __init__.py  file_with_progress.py  gpu_preprocessor.py  img_preprocess.py  plots.py
