[project]
name = "unite-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LegenDUST", email = "dhnam0502@naver.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "gdown>=5.2.1",
    "jaxtyping>=0.3.7",
    "kagglehub>=1.0.0",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.0",
    "pandas-stubs>=3.0.0.260204",
    "pillow>=12.1.0",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torchcodec==0.10.0",
    "transformers>=5.1.0",
    "typer>=0.23.1",
    "types-seaborn>=0.13.2.20251221",
    "types-tqdm>=4.67.3.20260205",
    "wandb>=0.24.2",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[project.optional-dependencies]
gpu = ["torch==2.9.0", "torchvision", "flash-attn"]
cpu = ["torch==2.9.0", "torchvision"]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch==2.9.0"]

[tool.uv.extra-build-variables]
flash-attn = { UV_EXTRA_INDEX_URL= " https://download.pytorch.org/whl/cu126" }


[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", extra = "gpu" },
]
torchvision = [
  { index = "pytorch-cu126", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff.lint]
ignore = ["F722", "F821"]

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"
