[project]
name = "unite-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LegenDUST", email = "dhnam0502@naver.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.1",
    "jaxtyping>=0.3.7",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "onnx>=1.20.1",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.0",
    "pandas-stubs>=3.0.0.260204",
    "pillow>=12.1.0",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torchcodec==0.9.0",
    "typer>=0.23.1",
    "types-seaborn>=0.13.2.20251221",
    "types-tqdm>=4.67.3.20260205",
    "wandb>=0.24.2",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ]
]

[project.optional-dependencies]
gpu = ["lightning>=2.6.1", "transformers[accelerate,sentencepiece]>=5.1.0", "torch==2.9.1", "torchvision==0.24.1", "flash-attn"]
cpu = [
    "lightning>=2.6.1",
    "transformers[accelerate,sentencepiece]>=5.1.0",
    "torch==2.9.1+cpu ; sys_platform != 'darwin' and (platform_machine == 'x86_64' or platform_machine == 'AMD64')",
    "torchvision==0.24.1+cpu ; sys_platform != 'darwin' and (platform_machine == 'x86_64' or platform_machine == 'AMD64')",
    "torch==2.9.1 ; sys_platform == 'darwin' or platform_machine == 'aarch64'",
    "torchvision==0.24.1 ; sys_platform == 'darwin' or platform_machine == 'aarch64'",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch~=2.9.0"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", extra = "gpu" },
  { index = "pytorch-cpu", extra = "cpu" }
]
torchvision = [
  { index = "pytorch-cu128", extra = "gpu" },
  { index = "pytorch-cpu", extra = "cpu" }
]

# [dependency-groups] # There's buggy behaviour here - hope it gets well some day
# dev = ["unite-detection[cpu]"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint]
select = [
  "F", "E", "I", "TCH", "UP"
]
ignore = ["F722", "F821", "UP037"]

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"
